# scale-aware-air-sea

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  literature.md  pyproject.toml  setup.cfg
.github/workflows/: beam.yaml  build_image.yaml  ci.yaml
ci/: environment.yaml  requirements-beam.txt
notebooks/issues/: CoastalHalo.ipynb  filter_mean_order_ice.ipynb  gcm-filters.ipynb
notebooks/jbusecke/: Untitled.ipynb  aerobulk-python_performance.ipynb  cm26_combine_filter_inputs.ipynb  cm26_first_results.ipynb  cmip6_dataset_exploration.ipynb  dev_weighted_coarsen.ipynb  issue_weighted_mean_precision.ipynb  new-workspace.jupyterlab-workspace  stash_dask_debugging.ipynb
notebooks/jbusecke/analysis/: hypothesis_qstar_qstarstar.ipynb  power_spectrum_games.ipynb  starting_point_for_dhruv.ipynb
notebooks/jbusecke/demo/: ams2023_demo.ipynb
notebooks/jbusecke/testing/: Example_Regridding_Save.ipynb  Filter_CM2_6_air_sea_fluxes.ipynb  aerobulk_test.ipynb  cm26_xesmf_hack.ipynb  lazy_xesmf_performance.ipynb  performance_dask_gateway.ipynb  test_cm26_coare3p6.py  test_different_filter_type.ipynb  xesmf_fail_example.ipynb  xesmf_test.py
notebooks/jbusecke/testing/old/: issue_dashboard_localcluster.ipynb  upload_cm26_weights_from_gyre.ipynb
notebooks/jbusecke/visualization/: q_star_movie.ipynb
notebooks/jbusecke/visualization/old/: q_star_movie_preprocessing.ipynb
notebooks/jbusecke/workflow/: Appendix_Filter_Scale.ipynb  cm26_combine_filter_inputs.ipynb  cm26_eke.ipynb  cm26_max_windspeed.ipynb  cm26_mean_sst.ipynb  cm26_paper_plots.ipynb  cm26_paper_plots_preprocessing.ipynb  cm26_pipeline-debug-distributed.ipynb  cm26_pipeline-debug.ipynb  cm26_pipeline-debug.py  cm26_pipeline.ipynb  cm26_pipeline.py  cm26_utils.py  cm26_utils_old.py  cmip6_resolution_survey.ipynb  debugging_script.py  gcm_filters_halo.ipynb  generate_regridding_weights_cm26.ipynb  reproduce_cm26_flux.ipynb  reverse_engineer_c.ipynb  small_scale_u_ocean_vs_atmos.ipynb  utils.py
notebooks/jbusecke/workflow/fixed_issues/: debug_filtering_FIXED.ipynb
notebooks/jbusecke/workflow/old/: cm26_pipeline_old.ipynb
notebooks/old_paper/: case_study.ipynb  factor_out_plot_processing.ipynb  plots.ipynb
notebooks/paigem/: Plot_all_algos_CM26_CESM_clean.ipynb  profile_aerobulk-python.ipynb
notebooks/paigem/workflow/: CM26_filtering_MOM5T.ipynb  Filter_CM2_6_air_sea_fluxes.ipynb  Filter_scalarField_fixedLength_POP.ipynb
paper/: Appendix_Compare_Methods.ipynb  appendix_plots.ipynb  case_study.ipynb  full_plots.ipynb  plots-cesm.ipynb  plots.ipynb  powerSpectraTutorial.ipynb
paper/figures_submission/: list_output.txt
pipeline/: cm26_calculate_fluxes.ipynb  cm26_combine_filter_inputs.ipynb  cm26_decompose_small_scale_signal.ipynb  full_processing.ipynb  ice_mask_brute_force.ipynb  ice_mask_fail.ipynb  step_1_cesm_combine_filter_inputs.ipynb  step_1_cm26_combine_filter_inputs.ipynb  step_1_combine_filter_inputs.ipynb  step_2_cesm_calculate_fluxes.ipynb  step_2_cm26_calculate_fluxes.ipynb  step_3_cesm_decompose_small_scale_signal.ipynb  step_3_cm26_decompose_small_scale_signal.ipynb  step_4_ice_mask_brute_force.ipynb
pipeline/old_cesm_code_delete/: step_3_cesm_decompose_small_scale_signal.ipynb
pipeline/old_code/: generate_regridding_weights_cm26.ipynb  ice_mask_fail.ipynb  step_00_ice_mask_brute_force_cm2.6.ipynb  step_1_combine_filter_inputs.ipynb  step_2_calculate_fluxes.ipynb  step_3_decompose_small_scale_signal.ipynb
scale_aware_air_sea/: beam.py  cesm_utils.py  cm26_utils.py  parameters.py  plotting.py  stages.py  stages_tests.py  utils.py
scale_aware_air_sea/old/: cesm_utils.py  cm26_utils.py
tests/: test_beam.py  test_utils.py
