[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "scale_aware_air_sea/_version.py"
write_to_template = "__version__ = '{version}'"

[project]
name = "scale_aware_air_sea"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.black]
force-exclude = true
extend-exclude = '^(notebooks/|other/folder/)'


[tool.ruff]
# Exclude directories
force-exclude = true
extend-exclude = ["notebooks"]

# auto fix issues
fix = true

target-version = "py310"
