[options]
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy >= 1.20  # recommended to use >= 1.22 for full quantile method support
    pandas >= 1.3
    packaging >= 21.0